# CPP

./: .gitignore
Aufgabe1/: CMakeLists.txt  Taxi.cpp  Taxi.h  main.cpp
Aufgabe1_2/: main.cpp
Aufgabe2/: CMakeLists.txt  CartasianData.cpp  CartasianData.h  ComplexNumber.cpp  ComplexNumber.h  PolarData.cpp  PolarData.h  includes.h  main.cpp
Aufgabe4/: CMakeLists.txt  Circle.cpp  Circle.h  CircleException.cpp  CircleException.h  Coordinate.cpp  Coordinate.h  CustomException.cpp  CustomException.h  Graph.cpp  Graph.h  InputException.cpp  InputException.h  Rectangle.cpp  Rectangle.h  RectangleException.cpp  RectangleException.h  main.cpp
